add section examens

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from "../components/Header.jsx";
 import Hero from "../components/Hero.jsx";
 import HowItWorks from "../components/HowItWorks.jsx";
 import Features from "../components/Features.jsx";
+import CustomExams from "../components/CustomExams.jsx";
 import Pricing from "../components/Pricing.jsx";
 import Contact from "../components/Contact.jsx";
 import Footer from "../components/Footer.jsx";
@@ -15,6 +16,7 @@ import Footer from "../components/Footer.jsx";
     <Hero client:load />
     <HowItWorks client:visible />
     <Features client:visible />
+    <CustomExams client:visible />
     <Pricing client:visible />
     <Contact client:visible />
   </main>
