--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,6 +18,7 @@ const {
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+		<meta name="google-site-verification" content="ZZ0hCR9GKEuI2sjMmp0aeit_zA8UBR0Aomn-lV5cR7k" />
 
     <title>{title}</title>
     <meta name="description" content={description} />
